recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:6: error: not found: value trees
       trees(steps-1,length*shrink,angle,shrink);
       ^Tree:9: error: not found: value trees
       trees(steps-1,length*shrink,angle,shrink);
       ^